--- a/XuanYuan/Class2.0/Main/添加帐号/View/HTAcountAddHeaderCell.xib
+++ b/XuanYuan/Class2.0/Main/添加帐号/View/HTAcountAddHeaderCell.xib
@@ -29,7 +29,7 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dkg-No-Ze1">
                         <rect key="frame" x="88" y="20.5" width="216" height="40"/>
                         <subviews>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="登录信息  名称" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2RN-7F-rsI">
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="登录信息  名称" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="2RN-7F-rsI">
                                 <rect key="frame" x="0.0" y="0.0" width="216" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="ZqQ-tt-XFX"/>
