--- a/XuanYuan/Class2.0/Main/添加帐号/View/HTInfoPassWordAddCell.xib
+++ b/XuanYuan/Class2.0/Main/添加帐号/View/HTInfoPassWordAddCell.xib
@@ -22,7 +22,7 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AaV-q2-YbD">
                         <rect key="frame" x="0.0" y="4" width="320" height="29.5"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="◉ 密码标题" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XP3-c2-IVi">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="密码标题" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XP3-c2-IVi">
                                 <rect key="frame" x="16" y="9" width="54" height="12"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="12" id="d87-wP-dJ0"/>
@@ -54,7 +54,7 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="b75-ld-Mfg">
                         <rect key="frame" x="0.0" y="33.5" width="320" height="30"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="◉ 密码" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WVz-wb-7MM">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="密码" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WVz-wb-7MM">
                                 <rect key="frame" x="16" y="9" width="54" height="12"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="54" id="Zsw-p7-wDQ"/>
